Closed Bug 1766368 Opened 3 years ago Closed 3 years ago

Fix ignored-qualifiers warnings in Windows builds

Categories

(Core :: General, defect)

defect

Tracking

()

RESOLVED FIXED
101 Branch
Tracking Status
firefox101 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

Details

Attachments

(1 file)

browser/app/winlauncher/test/TestCrossProcessWin.cpp(151,26): error: 'const' type qualifier on return type has no effect [-Werror,-Wignored-qualifiers]
        reinterpret_cast<const wchar_t (*)()>(::GetProcAddress(
                         ^~~~~~
widget/windows/nsWindow.h(374,8): error: 'const' type qualifier on return type has no effect [-Werror,-Wignored-qualifiers]
  bool const DestroyCalled() { return mDestroyCalled; }
       ^~~~~~
widget/windows/nsFilePicker.h(93,5): error: 'const' type qualifier on return type has no effect [-Werror,-Wignored-qualifiers]
    const uint32_t Length() { return mSpecList.Length(); }
    ^~~~~~
widget/windows/nsFilePicker.h(95,5): error: 'const' type qualifier on return type has no effect [-Werror,-Wignored-qualifiers]
    const bool IsEmpty() { return (mSpecList.Length() == 0); }
    ^~~~~~

browser/app/winlauncher/test/TestCrossProcessWin.cpp(151,26): error: 'const' type qualifier on return type has no effect [-Werror,-Wignored-qualifiers]
reinterpret_cast<const wchar_t (*)()>(::GetProcAddress(
^~~~~~
widget/windows/nsWindow.h(374,8): error: 'const' type qualifier on return type has no effect [-Werror,-Wignored-qualifiers]
bool const DestroyCalled() { return mDestroyCalled; }
^~~~~~
widget/windows/nsFilePicker.h(93,5): error: 'const' type qualifier on return type has no effect [-Werror,-Wignored-qualifiers]
const uint32_t Length() { return mSpecList.Length(); }
^~~~~~
widget/windows/nsFilePicker.h(95,5): error: 'const' type qualifier on return type has no effect [-Werror,-Wignored-qualifiers]
const bool IsEmpty() { return (mSpecList.Length() == 0); }
^~~~~~

Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/9fba1bc0a565 Fix ignored-qualifiers warnings in Windows builds. r=rkraesig
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 101 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: