Bug 1766368 - Fix ignored-qualifiers warnings in Windows builds. r=rkraesig

browser/app/winlauncher/test/TestCrossProcessWin.cpp(151,26): error: 'const' type qualifier on return type has no effect [-Werror,-Wignored-qualifiers]
        reinterpret_cast<const wchar_t (*)()>(::GetProcAddress(
                         ^~~~~~
widget/windows/nsWindow.h(374,8): error: 'const' type qualifier on return type has no effect [-Werror,-Wignored-qualifiers]
  bool const DestroyCalled() { return mDestroyCalled; }
       ^~~~~~
widget/windows/nsFilePicker.h(93,5): error: 'const' type qualifier on return type has no effect [-Werror,-Wignored-qualifiers]
    const uint32_t Length() { return mSpecList.Length(); }
    ^~~~~~
widget/windows/nsFilePicker.h(95,5): error: 'const' type qualifier on return type has no effect [-Werror,-Wignored-qualifiers]
    const bool IsEmpty() { return (mSpecList.Length() == 0); }
    ^~~~~~

Differential Revision: https://phabricator.services.mozilla.com/D144663